--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "tech-stack-icons": "^3.3.2",
     "three": "^0.180.0",
     "vite": "^7.1.6"
   }
